[gd_scene load_steps=4 format=3 uid="uid://dhgw6enyyltpn"]

[ext_resource type="Script" path="res://scenes/draggables/key_draggable.gd" id="1_3t2eg"]
[ext_resource type="Texture2D" uid="uid://cta1u4cjpvw6t" path="res://art/key/key_holding.png" id="1_h7k5l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_olwan"]
size = Vector2(42, 144)

[node name="KeyDraggable" type="Node2D"]
script = ExtResource("1_3t2eg")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_h7k5l")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_olwan")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
